--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -17,19 +17,19 @@ background-color: black;
 .contenedor{
 	margin: auto;
     width: 60%;
-    max-width:1050px;
+    max-width:1000px;
     position: relative;
+    background-color: aqua;
  
     
 }
 
 .contenedorfotos{
     margin: auto;
-    margin-top:50px;
-    width: 60%;
-    max-width: 700px;
-    min-width: 200px;
-   text-align: center;
+width: 60%;
+max-width: 700px;
+min-width: 250px;
+text-align: center;
 	
 }
 .containerParrafosabout{
@@ -38,7 +38,7 @@ background-color: black;
     max-width: 700px;
     min-width: 200px;
     margin-top: 10px;
-    margin-bottom: 400px;
+    margin-bottom: 200px;
     position: relative;
     text-align: justify;
   
