--- a/css/style.css
+++ b/css/style.css
@@ -63,54 +63,55 @@ a{
     overflow:hidden;
     width:100%;
     max-width: 1400px;
+    
    
    }
 
 #contenedorjob{
-        margin: 15 0;   
-        margin-top: 20px;
-        width: 100%;
-        max-width: 900px;
-        padding:100px;
+        margin: auto ;   
+        margin-top: 15px;
+        width: 60%;
+        max-width: 700px;
+        min-width: 100px;
         overflow: hidden;
         display: flex;
-        justify-content:space-between;
         flex-wrap: wrap;
-  
+ 
+       
     
       }
 
       
     .contenedorj1{
     position: relative;
-    margin: 10 10;
+    margin:15 15 5 5;
     padding: 10px;
     background-color:transparent;
     display: flex;
-  
-       
+    align-items: center;   
        }
       .contenedorj1 figure{
         margin: auto;
         position:relative;
-        width: 250px;
+        width:100%;
+        max-width: 250px;
         height: 200px;
         cursor: pointer;
         overflow: hidden;
         border-radius: 6px;
-        text-align: center;
-    
+     
        
       }
       
       .contenedorj1 img{
-        margin: auto;
-        width: 200px; 
+        margin: 0 5;
+        position: relative;
+        width: 90%;
+        max-width: 200px; 
+        min-width: 150px;
         height: 200px;
-        padding:5px;
         object-fit: cover;
-        text-align: center;
-        
+      
           }
       .contenedorj1 figure img{
          margin: auto;
